--- a/styles/sass/autocomplete-list.scss
+++ b/styles/sass/autocomplete-list.scss
@@ -20,7 +20,7 @@
 
     &:hover {
       background-color: #f2f3f4;
-      background-image: url('../../assets/icons/plus.svg');
+      background-image: url('/assets/icons/plus.svg');
       background-repeat: no-repeat;
       background-position: top 5px right 12px;
       background-size: 22px;
