--- a/styles/sass/repos-list.scss
+++ b/styles/sass/repos-list.scss
@@ -16,7 +16,7 @@
   }
 
   &__item:hover &__button {
-    background-image: url('../../assets/icons/close.svg');
+    background-image: url('/assets/icons/close.svg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -35,6 +35,22 @@
 .block-info-list {
   &__item {
     font-weight: 700;
+    padding-left: 30px;
+    background-size: 24px;
+    background-repeat: no-repeat;
+    background-position: left 0 top 0;
+
+    &--name {
+      background-image: url('/assets/icons/book.svg');
+    }
+
+    &--owner {
+      background-image: url('/assets/icons/user.svg');
+    }
+
+    &--stars {
+      background-image: url('/assets/icons/star.svg');
+    }
   }
 
   &__link {
