--- a/styles/sass/autocomplete-list.scss
+++ b/styles/sass/autocomplete-list.scss
@@ -1,11 +1,9 @@
 .autocomplete-list {
-  min-height: 96px;
   background-color: #fff;
   border-radius: 6px;
   overflow: auto;
   scrollbar-width: thin;
   scrollbar-color: var(--scrollbar-thumb-color) transparent;
-
   box-shadow: 0px 7px 7px #aaaeb3;
 
   &__item {
@@ -17,6 +15,7 @@
     text-wrap: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+    user-select: none;
 
     &:hover {
       background-color: #f2f3f4;
@@ -25,5 +24,15 @@
       background-position: top 5px right 12px;
       background-size: 22px;
     }
+  }
+
+  &__repo-name {}
+
+  &__repo-owner {
+    color: #babec2;
+  }
+
+  &__repo-stars {
+    color: #babec2;
   }
 }
