--- a/styles/sass/variables.scss
+++ b/styles/sass/variables.scss
@@ -2,4 +2,5 @@
   --background-color: #f6f8fa;
   --global-border-color: #d1d9e0;
   --scrollbar-thumb-color: #b5bcc2;
+  --green-accent: #1f883d;
 }
