--- a/styles/sass/repos-list.scss
+++ b/styles/sass/repos-list.scss
@@ -1,9 +1,11 @@
 .repos-list {
-  margin-top: auto;
-  padding-top: 20px;
+  margin-top: 20px;
   display: flex;
   flex-direction: column;
   row-gap: 10px;
+  overflow-y: auto;
+  scrollbar-width: thin;
+  scrollbar-color: var(--scrollbar-thumb-color) transparent;
 
   &__item {
     padding: 8px 12px;
@@ -15,13 +17,6 @@
     word-break: break-all;
   }
 
-  &__item:hover &__button {
-    background-image: url('../../assets/icons/close.svg');
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-  }
-
   &__button {
     flex-basis: 28px;
     height: 28px;
@@ -29,6 +24,10 @@
     align-self: center;
     border: none;
     background-color: transparent;
+    background-image: url('../../assets/icons/close.svg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
   }
 }
 
@@ -41,7 +40,6 @@
     background-position: left 0 top 0;
 
     &--name {
-      // background-image: url('/assets/icons/book.svg');
       background-image: url('../../assets/icons/book.svg');
     }
 
