--- a/styles/sass/search-form.scss
+++ b/styles/sass/search-form.scss
@@ -14,6 +14,15 @@
     }
   }
 
+  .request-limit-message {
+    display: none;
+    padding: 5px 10px;
+    border-radius: 6px;
+    user-select: none;
+    color: rgb(170, 0, 0);
+    background-color: rgb(255, 0, 0, 0.2);
+  }
+
   .autocomplete-list {
     max-height: 160px;
     position: absolute;
@@ -54,5 +63,9 @@
     &__repo-stars {
       color: #babec2;
     }
+  }
+
+  &__repos-list {
+    margin-top: 20px;
   }
 }
